# MLSystem

./: .gitignore  enter_conda_vscode.ps1  enter_conda_vscode.sh  env_config.json  env_config_test_registry_env.json  pytorch_3_11_14_env.yaml  set_mlsystem_env.ps1  set_mlsystem_env.sh  verify_job_update.py  verify_new_features.py  verify_refactor.py  更新履歴  設計書.md  設計書_MLSystem.md  設計書_PyPathManager.md  設計書_SimpleTaskQueue.md
.agent/rules/: envrule.md
MLSystem/: __init__.py  builder.py  callbacks.py  checkpoint_manager.py  execute_plot.py  execute_train.py  gui_start.py  hashing.py  inspector.py  loader.py  pyproject.toml  queue_manager.py  registry.py  runner.py  submit.py  submit_cli.py
MLSystem/MLsystem.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
MLSystem/configs/: config.yaml
MLSystem/gui/: main_window.py
MLSystem/utils/: base_plot.py  config_base.py  env_manager.py  hydra_helper.py
PyPathManager/: pyproject.toml
PyPathManager/src/pypath_manager/: __init__.py
SimpleTaskQueue/: pyproject.toml
SimpleTaskQueue/src/simple_task_queue/: cli.py
common/: config.py  user_config.json
configs/: config.yaml  registry.json
configs/common/: user_config.json
non_MLSystem/: litening.py  pytorch.py
plot_old/ILC/: dataset_utils.py  dataset_utils_jet.py  evaluate.py  events.py  (+7 more)
system/: builder.py  callbacks.py  checkpoint_manager.py  config_base.py  env_setup.py  execute_plot.py  execute_train.py  gui.py  gui_start.py  hashing.py  inspector.py  loader.py  queue_manager.py  registry.py  runner.py  submit.py  train.py
test_registry_env/: registry.json
(+47 files in other folders)
