[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypath_manager"
version = "0.1.0"
description = "A simple tool to manage sys.path via environment variables"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pypath_manager"]
