[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_task_queue"
version = "0.1.0"
description = "A simple task queue for executing commands in background"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
stq-worker = "simple_task_queue.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["simple_task_queue"]
